@@ -1,3 +1,10 @@
+2009-07-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* src/calendar/base/src/calDavCalendar.js: the observe method was
+	modified to handle the new "caldav-acl-reset" notification. The
+	code was also simplified by triggering a refresh whenever the
+	mACLRefreshData ivar is set.
+
 2009-07-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* src/calendar/providers/composite/calCompositeCalendar.js: when
